--- a/cs246.html
+++ b/cs246.html
@@ -491,7 +491,90 @@
             <div class="lec5">
                 <h3>Lecture 5 - 21/09/2017</h3>
                 <hr>
-                <P>Lecture 5 will be updated this weekend... I hope.</P>
+                <P>
+                    <b>Reading String</b><br>
+                    type <code class="name">std::string (#include &lt;string&gt;)</code>: More details later.
+                </P>
+                <script src="https://gist.github.com/vertli/d3f503d84e120429c63c3973259ce035.js"></script>
+                <p>
+                    Line 7 will read a string, it skips leading whitespace and stops at whitespace (read one word only).<br><br>
+                </p>
+                <p>
+                    What if we want the whitespace?<br>
+                    Use <code>getline (cin, s)</code>.<br>
+                    It will read from current position to text newline into <code>s</code>.<br>
+                </p>
+                <p>
+                    Recall <code>cout &lt;&lt; 95 &lt;&lt; endl</code>; this will print out 95.<br>
+                    What if we want to print a number in hexadecimal?<br>
+                    Do <code>cout &lt;&lt; hex &lt;&lt; 95 &lt;&lt; end;</code>; this will prints out 5f.<br>
+                    The <code>hex</code> is an I/O manipulator. After use it, all subsequent integers print in hexadecimal forever.<br>
+                    To reset to decimal, use <code>cout &lt;&lt; dec</code>.<br>
+                    For other manipulators, check <code>#include &lt;iomanip&gt;</code>.<br><br>
+                </p>
+                <p>
+                    Stream abstraction applies to other sources of data.<br>
+                    File - read from a file instead of <code>cin</code>.<br>
+                    Using <code>std::ifstream</code> to read from a file and using <code>std::ofstream</code> wrtie to a file.<br>
+                </p>
+                <p>
+                    File access in C:
+                </p>
+                <script src="https://gist.github.com/vertli/42a654534afa963149b0d37f92482b75.js"></script>
+                <p>
+                    Here is the C++ version:
+                </p>
+                <script src="https://gist.github.com/vertli/293759ce514d9c590ea0cd362e40de7c.js"></script>
+                <p>Anything you can do with <code>cin/ cout</code>, you can do with an <code>ifstream / ofstream</code>.<br><br></p>
+                <p>
+                    String Example: Attach a stream to a string variable and read from/write to the string.<br>
+                    <li><code>std::istringstream</code>: read from a string</li>
+                    <li><code>std::ostringstream</code>: write to a string</li>
+                    <br>
+                    Solution:
+                </p>
+                <script src="https://gist.github.com/vertli/3208d6af553653235a3b076fe4aa1e97.js"></script>
+                <br>
+                <p>
+                    Example: convert string to number.
+                </p>
+                <script src="https://gist.github.com/vertli/5fe7fc3d02a418e9d2c89d7fac6b84e6.js"></script>
+                <br>
+                <p>Example Revisited: Echo all numbers, skip non-numbers.</p>
+                <script src="https://gist.github.com/vertli/608619f17dbe436a73f608c8902f8f66.js"></script>
+                <br>
+                <p>
+                    <b>Strings</b><br>
+                    In C...
+                    <li>array of char <code>(char* or char[])</code>, terminated by <code>\0</code></li>
+                    <li>
+                        must explicitly manage memory
+                        <ul>
+                            <li>allocate more memory as strings get larger</li>
+                        </ul>
+                    </li>
+                    <li>easy to overwrite the <code>\0</code> and corrupt memory</li>
+                    <br>
+                    In C++...
+                    <li>grow as needed (no need to manage memory)</li>
+                    <li>safer to manipulate</li>
+                    <br>Example: <code>string s = "Hello";</code><br>
+                    <code>s</code> is the C++ string, creater from the C string.<br>
+                    <code>"Hello"</code> is the C-style string (char array) <code>[H][e][l][l][o][\0]</code><br>
+                </p>
+                <p>
+                    <b>String Operations</b>
+                    <li>Equality: <code>s1 == s2;</code></li>
+                    <li>Inequality: <code>s1 != s2;</code></li>
+                    <li>Comparison (lexicographic): <code>s1 &lt;= s2;</code></li>
+                    <li>Length: <code>slength();</code></li>
+                    <li>Get individual chars: <code>s[0]  s[1]  s[2]  etc...</code></li>
+                    <li>Concat: <code>s3 = s1 + s2;     s3 += s4;</code></li>
+                    For more details, check the course notes in CS246 website.<br><br>
+                </p>
+                <p>
+                    <b>Default Function Parameters:</b>
+                </p>
             </div>
             <hr>
             
