--- a/index.html
+++ b/index.html
@@ -17,22 +17,25 @@
             <h2>Class of 2020</h2>
             <br>
             <div class="row">
-                <div class="col-md-3"></div>
+                <div class="col-md-4"></div>
                 <div class="col-md-1"><a href="./doc/NewResume_CKLI.pdf" target="_blank">RÉSUMÉ</a></div>
                 <div class="col-md-1"><a href="./about.html">ABOUT</a></div>
                 <div class="col-md-1"><a href="./projects.html">PROJECTS</a></div>
-<!--                <div class="col-md-1"><a href="./cs246.html">NOTES</a></div>-->
+                <div class="col-md-1"><a href="./cs246.html">NOTES</a></div>
+                <div class="col-md-4"></div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-1">
+                    <a href="mailto: ck6li@edu.uwaterloo.ca" target="_blank;">EMAIL</a></div>
                 <div class="col-md-1">
                     <a href="https://github.com/vertli" target="_blank;">GITHUB</a></div>
                 <div class="col-md-1">
                     <a href="https://www.linkedin.com/in/vertckli/" target="_blank;">LINKEDIN</a></div>
                 <div class="col-md-1">
                     <a href="https://www.instagram.com/vert_arts/" target="_blank;">INSTAGRAM</a></div>
-<!--
-                <div class="col-md-1">
-                    <a href="mailto: ck6li@edu.uwaterloo.ca" target="_blank;">EMAIL</a></div>
--->
-                <div class="col-md-3"></div>
+                <div class="col-md-4"></div>
             </div>
         </div>  
 
