--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,6 @@
                     </button>
                     <a class="navbar-brand" href="./index.html">Calvin Li</a>
                 </div>
-
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="topNavbar">
                     <ul class="nav navbar-nav">
@@ -57,7 +56,9 @@
                         <th>
                             <img src = "./image/project/TRACKR.JPG">
                             <h2>TRACKR</h2>
-                            <p><strong>Summary: </strong>A website which created as a group project in Hack The North 2017. My job was developed the front-end part.</p>
+                            <p><strong>Summary:</strong><br>
+                                An unfinished website which was created as a group project in Hack The North 2017. My job was developed the front-end part.
+                            </p>
                             <p><strong>Language: </strong>HTML, CSS, Javascript, Node.js</p>
                             <p><Strong>Software Used: </Strong>Brackets</p>
                         </th>
@@ -66,8 +67,8 @@
                         <th>
                            <img src = "./image/project/website.JPG">
                             <h2>Personal Website</h2>
-                            <p><strong>Summary: </strong><br> The place to display my projects/arts. Yes, you are visiting it now!</p>
-                            <p><strong>Language: </strong>HTML, CSS</p>
+                            <p><strong>Summary: </strong><br> The place to display my projects. Yes, you are visiting it now!</p>
+                            <p><strong>Language: </strong>HTML, CSS, Javascript</p>
                             <p><strong>Software Used: </strong>Brackets</p>
                         </th>
                     </tr>
