--- a/cs246.html
+++ b/cs246.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
         <link rel="stylesheet" href="./note.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+        <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font/build/web/hack.css'> <!-- HACK!!! -->
         <!-- stylesheet found from w3school. (icon use)-->
         <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
